@@ -1,4 +1,6 @@
 6.0.0 - **.**.2019: Code refactoring and python packaging 
+                    --unbuffered got removed. All input are now unbuffered.
+                    --noecho added to suppress echoing entered keys (as it was like in unbuffered mode)
 5.2.0 - 18.07.2019: --write added to log received data into a log file
 5.1.0 - 16.04.2019: Unified the escape-sequence start symbol to escape (\e)
 5.0.1 - 06.04.2019: Fixed a bug that lead to mishandling "\n"-Only line breaks when in unbuffered mode
